force-app/main/default/objects/RD_tblBurstTolMethod__c/RD_tblBurstTolMethod__c.object-meta.xml
<CustomObject>
    <label>RD tblBurstTolMethod</label>
    <nameField>
        <label>RD tblBurstTolMethod</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD tblBurstTolMethod</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>