force-app/main/default/objects/RD_tblBurstTolMethod__c/fields/BPMMMaxPressLL__c.field-meta.xml
<CustomField>
    <fullName>BPMMMaxPressLL__c</fullName>
    <label>BPMMMaxPressLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>