force-app/main/default/objects/RD_tblBurstTolMethod__c/fields/BPMMMaxPressUL__c.field-meta.xml
<CustomField>
    <fullName>BPMMMaxPressUL__c</fullName>
    <label>BPMMMaxPressUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>