force-app/main/default/objects/RD_tblBurstTolMethod__c/fields/BPMMMinPressLL__c.field-meta.xml
<CustomField>
    <fullName>BPMMMinPressLL__c</fullName>
    <label>BPMMMinPressLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>