force-app/main/default/objects/RD_tblBurstTolMethod__c/fields/BPMMMinPressUL__c.field-meta.xml
<CustomField>
    <fullName>BPMMMinPressUL__c</fullName>
    <label>BPMMMinPressUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>