force-app/main/default/objects/RD_tblBurstTolMethod__c/fields/MinMulti__c.field-meta.xml
<CustomField>
    <fullName>MinMulti__c</fullName>
    <label>MinMulti</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>