force-app/main/default/objects/RD_tblBurstTolMethod__c/fields/RatedPressLL__c.field-meta.xml
<CustomField>
    <fullName>RatedPressLL__c</fullName>
    <label>RatedPressLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>